@@ -3,7 +3,8 @@ ChangeLog file for Endian libencloud
 next:
 	- vpn: allow timeout=0 (no timer)
 	- etc: default verbosity=7 for ECE/SECE
-	- ECE: fix compilation error in http/handler1.ccp
+	- ECE: fix compilation error in http/handler1.ccp;
+	  handle PoI from cert CN (no longer required as separate file)
 	- SECE: fix compilation error in core (header not included)
 	- defaults: LIBENCLOUD_DATA_PREFIX is /var/lib/encloud if !LIBENCLOUD_ENDIAN
 	- client: avoid errors when certificate verification is off
